--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
+        background-color: rgb(123, 210, 210);
     }
     #stopwatch {
         font-size: 2em;
